--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -3,7 +3,7 @@ applications:
   path: ./applications/allocations-server/build/libs/allocations-server.jar
   routes:
   - route: allocations-pal-am20064429.apps.dev.pcf-aws.com
-  memory: 1G
+  memory: 256M
   instances: 1
   env:
     REGISTRATION_SERVER_ENDPOINT: http://FILL_ME_IN
