--- a/manifest-backlog.yml
+++ b/manifest-backlog.yml
@@ -3,7 +3,7 @@ applications:
   path: ./applications/backlog-server/build/libs/backlog-server.jar
   routes:
   - route: backlog-pal-am20064429.apps.dev.pcf-aws.com
-  memory: 1G
+  memory: 256M
   instances: 1
   env:
     REGISTRATION_SERVER_ENDPOINT: http://FILL_ME_IN
