--- a/manifest-timesheets.yml
+++ b/manifest-timesheets.yml
@@ -3,7 +3,7 @@ applications:
   path: ./applications/timesheets-server/build/libs/timesheets-server.jar
   routes:
   - route: timesheets-pal-am20064429.apps.dev.pcf-aws.com
-  memory: 1G
+  memory: 256M
   instances: 1
   env:
     REGISTRATION_SERVER_ENDPOINT: http://FILL_ME_IN
