--- a/manifest-timesheets.yml
+++ b/manifest-timesheets.yml
@@ -2,7 +2,7 @@ applications:
 - name: tracker-timesheets
   path: ./applications/timesheets-server/build/libs/timesheets-server.jar
   routes:
-  - route: timesheets-pal-am20064429.apps.dev.pcf-aws.com
+  - route: timesheets-pal-am20064429.cfapps.io
   memory: 256M
   instances: 1
   env:
